Fixed Horizontal Scrolling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,8 +64,8 @@
     --font-weight-extrabold: 800;
     --font-weight-black: 900;
 
-    --line-height-tight: 1.2;
-    --line-height-compact: 1.35;
+    --line-height-tight: 1.3;
+    --line-height-compact: 1.4;
     --line-height-comfort: 1.5;
 
     /* SIZING & SPACING */
@@ -147,7 +147,7 @@
 
   body {
     margin: 0;
-    min-height: 100vh;
+    /* min-height: 100vh; */
     text-rendering: optimizeLegibility;
     line-height: 1.5;
   }
@@ -257,6 +257,7 @@
 
   .viz-body-container {
     font-family: var(--font-text-sans);
+    max-width: 100%;
     /* margin-block-start: var(--block-flow-1); */
     margin-block-end: var(--block-flow-1);
   }
@@ -351,7 +352,8 @@
   }
 
   .viz-lead {
-    font-size: larger;
+    font-size: var(--font-size-text-2);
+    line-height: var(--line-height-tight);
   }
 
   /* Only for VIZCHTRA logotype - FIXED VALUES*/
@@ -391,52 +393,54 @@
     font-family: var(--font-display-sans);
     font-size: var(--font-size-display-0);
     font-optical-sizing: auto;
-
-    .V1 {
-      font-variation-settings: 'slnt' -4, 'wght' 750;
-      letter-spacing: 0.25rem;
-    }
-
-    .I1 {
-      font-variation-settings: 'slnt' 8, 'wght' 750;
-      letter-spacing: 0.0rem;
-    }
-
-    .Z1 {
-      font-variation-settings: 'slnt' 0, 'wght' 750;
-      letter-spacing: -0.1rem;
-    }
-
-    .C2 {
-      font-variation-settings: 'slnt' 2, 'wght' 400;
-      letter-spacing: -0.1rem;
-    }
-
-    .H2 {
-      font-variation-settings: 'slnt' 7, 'wght' 400;
-      letter-spacing: -0.1rem;
-    }
-
-    .I2 {
-      font-variation-settings: 'slnt' 8, 'wght' 400;
-      letter-spacing: -0.3rem;
-    }
-
-    .T2 {
-      font-variation-settings: 'slnt' -6, 'wght' 400;
-      letter-spacing: -0.1rem;
-    }
-
-    .R2 {
-      font-variation-settings: 'slnt' -8, 'wght' 400;
-      letter-spacing: -0.1rem;
-    }
-
-    .A2 {
-      font-variation-settings: 'slnt' 0, 'wght' 400;
-      letter-spacing: 0.0rem;
-    }
+    max-width: 10ch;
   }
+
+  .V1 {
+    font-variation-settings: 'slnt' -4, 'wght' 750;
+    letter-spacing: 0.25rem;
+  }
+
+  .I1 {
+    font-variation-settings: 'slnt' 8, 'wght' 750;
+    letter-spacing: 0.0rem;
+  }
+
+  .Z1 {
+    font-variation-settings: 'slnt' 0, 'wght' 750;
+    letter-spacing: -0.1rem;
+  }
+
+  .C2 {
+    font-variation-settings: 'slnt' 2, 'wght' 400;
+    letter-spacing: -0.1rem;
+  }
+
+  .H2 {
+    font-variation-settings: 'slnt' 7, 'wght' 400;
+    letter-spacing: -0.1rem;
+  }
+
+  .I2 {
+    font-variation-settings: 'slnt' 8, 'wght' 400;
+    letter-spacing: -0.3rem;
+  }
+
+  .T2 {
+    font-variation-settings: 'slnt' -6, 'wght' 400;
+    letter-spacing: -0.1rem;
+  }
+
+  .R2 {
+    font-variation-settings: 'slnt' -8, 'wght' 400;
+    letter-spacing: -0.1rem;
+  }
+
+  .A2 {
+    font-variation-settings: 'slnt' 0, 'wght' 400;
+    letter-spacing: 0.0rem;
+  }
+
 
   /* Alphabet Slant Variations */
   .a {
